# verible-xml

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-ci.yml  python-publish.yml
tests/: test_nexus_pypi.py
