[tool.poetry]
authors = ["kannkyo <15080890+kannkyo@users.noreply.github.com>"]
description = "boilerplate project for python"
include = ["sbom.json"]
name = "boilerplate-python"
version = "0.1.5"

[tool.poetry.dependencies]
Flask = "^2.0.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
cyclonedx-bom = "^1.0.2"
flake8 = "^4.0.1"
flake8-formatter-junit-xml = "^0.0.6"
flake8-html = "^0.4.1"
in-toto = "^1.1.1"
pycodestyle = "^2.7.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
recommonmark = "^0.7.1"
sphinx = "^3.4.1"
sphinx-markdown-tables = "^0.0.15"
sphinx-rtd-theme = "^0.5.0"
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--junitxml=report.xml",
  "--verbose",
]
testpaths = [
  "tests",
]
